Self/playorg/Unpackaged/Config/objects/Assessment_Domain__c.object
<CustomObject>
    <description>ASSESSMENT</description>
    <fields>
        <fullName>Answered_Questions__c</fullName>
        <label>Answered Questions</label>
        <summarizedField>Assessment_Question__c.Answered_Questions__c</summarizedField>
        <summaryForeignKey>Assessment_Question__c.Question_Domain__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Assessment Domains</relationshipLabel>
        <relationshipName>Assessment_Domains</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Help text associated with domain</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <summarizedField>Assessment_Question__c.Score__c</summarizedField>
        <summaryForeignKey>Assessment_Question__c.Question_Domain__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Sort order for page / domain</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Domain</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>